@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Don't display attenuation or repell if denied.
+Fixes part of #2941923: 11 bugs, alchemy, spell attunement, npc shops, client (WIN).
+Nicolas Weeger 2010-08-01
+
 Fix bug #3018536: duplication of items in containers.
 Correctly free the removed item's inventory.
 Also fix invalid carrying field.
